Update config to work for us.

--- a/msm.conf
+++ b/msm.conf
@@ -10,7 +10,7 @@
 # The user which Minecraft Server Manager commands will be executed as.
 # Also used by default for starting servers who do not specify an individual
 # server user.
-USERNAME="minecraft"
+USERNAME="root"
 
 
 # Directory Locations
@@ -19,7 +19,7 @@ USERNAME="minecraft"
 # These values are very important. They define where MSM stores various files
 
 # Where new servers are stored
-SERVER_STORAGE_PATH="/opt/msm/servers"
+SERVER_STORAGE_PATH="/msm/servers"
 
 # Where runnable jar files for use by servers are stored
 JAR_STORAGE_PATH="/opt/msm/jars"
@@ -30,7 +30,7 @@ VERSIONING_STORAGE_PATH="/opt/msm/versioning"
 
 # Change this to "true" to allow MSM to use RAMDisk for storing worlds.
 # Note: RAMDisk will only be used for worlds enabled as "in ram".
-RAMDISK_STORAGE_ENABLED="true"
+RAMDISK_STORAGE_ENABLED="false"
 
 # Where RAM enabled worlds are stored
 # This needs to be a path located inside the mounted ramdisk for your system
@@ -57,13 +57,13 @@ RAMDISK_STORAGE_PATH="/dev/shm/msm"
 WORLD_ARCHIVE_ENABLED="true"
 
 # Where "WorldEdit snapshot" compatible world backups are stored.
-WORLD_ARCHIVE_PATH="/opt/msm/archives/worlds"
+WORLD_ARCHIVE_PATH="/raid/msm/archives/worlds"
 
 # Where archived logs are stored, when a servers logs are "rolled":
-LOG_ARCHIVE_PATH="/opt/msm/archives/logs"
+LOG_ARCHIVE_PATH="/raid/msm/archives/logs"
 
 # Where complete server backups are stored:
-BACKUP_ARCHIVE_PATH="/opt/msm/archives/backups"
+BACKUP_ARCHIVE_PATH="/raid/msm/archives/backups"
 
 # rdiff-backup for worlds note:
 # If you want to use rdiff-backup as backup system for your worlds you need to have 
@@ -73,10 +73,10 @@ BACKUP_ARCHIVE_PATH="/opt/msm/archives/backups"
 # the higher priority, let to default (19) as a less priority is probably what you need.
 
 # Did rdiff-backup enabled ?
-RDIFF_BACKUP_ENABLED="false"
+RDIFF_BACKUP_ENABLED="true"
 
 # Number of days to keep versions
-RDIFF_BACKUP_ROTATION="7"
+RDIFF_BACKUP_ROTATION="2"
 
 # The nice parameter "-20" to "19", -20 is the higher priority on the system, 19 is the lessest
 RDIFF_BACKUP_NICE="19"
@@ -113,11 +113,11 @@ WORLD_RSYNC_PATH="/opt/msm/rsync/worlds"
 
 
 # User which stars the server, and interacts with it
-DEFAULT_USERNAME="minecraft"
+DEFAULT_USERNAME="root"
 
 # The name under which to run a servers screen session, each is made unique
 # by including the {SERVER_NAME} tag.
-DEFAULT_SCREEN_NAME="msm-{SERVER_NAME}"
+DEFAULT_SCREEN_NAME="{SERVER_NAME}"
 
 # A directory name relative to the server directory where worlds are stored
 DEFAULT_WORLD_STORAGE_PATH="worldstorage"
@@ -132,12 +132,12 @@ DEFAULT_WORLD_STORAGE_INACTIVE_PATH="worldstorage_inactive"
 # path to the original symlink target.
 # Setting this to false is useful if symlinks point to files that will
 # already be included in the backup (such as world symlinks.)
-DEFAULT_COMPLETE_BACKUP_FOLLOW_SYMLINKS="false"
+DEFAULT_COMPLETE_BACKUP_FOLLOW_SYMLINKS="true"
 
 
 # The location of standard Minecraft server files, relative to the
 # server directory
-DEFAULT_LOG_PATH="logs/latest.log"
+DEFAULT_LOG_PATH="server.log"
 DEFAULT_PROPERTIES_PATH="server.properties"
 DEFAULT_WHITELIST_PATH="white-list.txt"
 DEFAULT_BANNED_PLAYERS_PATH="banned-players.txt"
@@ -210,4 +210,4 @@ DEFAULT_MESSAGE_COMPLETE_BACKUP_FINISHED="Backup complete."
 
 # Default github url to pull updates from. Do not change this unless you want
 # to use another github fork of msm.
-UPDATE_URL="https://raw.github.com/marcuswhybrow/minecraft-server-manager/master"
+UPDATE_URL="https://raw.github.com/obliviator/minecraft-server-manager/master"
